# CSVista

./: .gitignore  .npmrc  LICENSE  README.md  environment.yml  package.json  pnpm-lock.yaml  pyproject.toml
backend/csvista/: __init__.py  cli.py  config.py  server.py
backend/csvista/api/: files.py
backend/csvista/core/: __init__.py  csv_loader.py  file_registry.py  path_policy.py
backend/csvista/models/: file.py
backend/tests/: test_cli.py  test_csv_loader.py  test_files_api.py  test_path_policy.py  test_server.py
docs/: api.md  design.md  development.md  security.md
examples/: messy.csv  people.csv
frontend/: index.html  package.json  vite.config.ts
frontend/src/: app.test.tsx  app.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/features/columns/: MetadataSummary.tsx
frontend/src/features/filters/: ColumnFilterPopover.test.tsx  ColumnFilterPopover.tsx  constants.ts  filterStorage.ts  filterUtils.ts  types.ts  useColumnFilters.ts
frontend/src/features/recentFiles/: RecentFilesMenu.tsx  recentFilesStorage.ts  types.ts  useRecentFiles.ts
frontend/src/features/settings/: TableSettingsMenu.tsx  displaySettingsStorage.ts  types.ts  useDisplaySettings.ts
frontend/src/features/table/: DataTable.tsx  constants.ts  tableLayout.ts  tableLayoutStorage.ts  types.ts  useTableLayout.ts
frontend/src/lib/: format.ts  guards.ts  hash.ts  metadataFingerprint.ts
frontend/src/styles/: globals.css
