[project]
name = "csvista"
version = "0.1.0"
description = "A local-first CSV browser for quickly inspecting data files in your browser."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
  {name = "CSVista contributors"}
]
dependencies = [
  "fastapi>=0.115.0",
  "polars>=1.0.0",
  "pydantic>=2.8.0",
  "python-multipart>=0.0.9",
  "typer>=0.12.0",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.0.0",
  "ruff>=0.6.0"
]

[project.scripts]
csvista = "csvista.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/csvista"]
artifacts = [
  "backend/csvista/frontend/dist/**"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
